# tvi---benchmark

./: .gitignore  README.md  pyproject.toml
configs/: device_template.yaml
examples/: README.md
experiments/: smoke_test.py
scripts/: batch_measure_tvi.py  generate_targets.py  measure_tvi_from_scan.py  run_benchmark.py  validate_scan.py
tvi/: __init__.py
tvi/aggregation/: __init__.py  statistics.py
tvi/calibration/: __init__.py  scanner_linearization.py  transfer_function.py
tvi/calibration_targets/: __init__.py  target_generator.py
tvi/configs/: device_template.yaml
tvi/io/: __init__.py  tiff_io.py
tvi/measurement/: __init__.py  measure_tone_ramps.py  tvi_core.py
tvi/preprocessing/: __init__.py  alignment.py
tvi/simulation/: __init__.py  dot_gain_simulator.py
tvi/tests/: test_measurement.py  test_real_pipeline.py  test_statistics.py  test_targets.py  test_tvi_core.py
tvi/visualization/: __init__.py  tvi_plots.py
tvi_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
